--- a/test_728x90_reg.html
+++ b/test_728x90_reg.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>728x90 - Regular</title>
   <link rel="stylesheet" href="./css/styles.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
 </head>
 <body>
   <table id="table">
@@ -14,7 +15,7 @@
       <td id="headline-container" rowspan="2" class="col-3 row-12 middle"></td>
 
       <td id="offer-container" rowspan="2" class="col-5 row-12 middle frame-1">
-        <div id="copies-container" class="slide-in-bottom">
+        <div id="copies-container">
           <p id="copy-one"></p> 
           <p id="copy-two"></p> 
           <p id="legal"></p>
